# dicom-viewer

./: .gitignore  LICENSE  README.md
dicom_viewer/osirix/: clear_dicom_overlay.py  export_roi.py  import_from_csv.py
dicom_viewer/osirix/utils/: Extract_ROIs_from_DICOM_Overlays.py
dicom_viewer/slicer/AarashRoi/: CMakeLists.txt
dicom_viewer/slicer/AarashRoi/ExportRoi/: CMakeLists.txt  ExportRoi.py
dicom_viewer/slicer/AarashRoi/ExportRoi/Resources/UI/: ExportRoi.ui
dicom_viewer/slicer/DicomViz/: CMakeLists.txt
dicom_viewer/slicer/DicomViz/DicomViz/: CMakeLists.txt  DicomViz.py
dicom_viewer/slicer/DicomViz/DicomViz/Resources/UI/: DicomViz.ui  ExportRoi_original.ui
dicom_viz/osirix/: clear_dicom_overlay.py
dicom_viz/osirix/utils/: Embed_ROIs_in_DICOM_Overlays.py  utils.py
dicom_viz/slicer/AarashRoi/ExportRoi/: ExportRoi.py
dicom_viz/slicer/AarashRoi/ExportRoi/Resources/UI/: ExportRoi_original.ui
